# cyclic_codes

./: .gitignore  README.md
mnlc_simulations/: .build.rs  Cargo.toml
mnlc_simulations/benches/: benches.rs
mnlc_simulations/data/: .all_first_codes_5  .err_and_cr_n:30  .err_and_cr_n:30_2  .err_and_cr_n:60_k:12  .fam5_fc_n012_k02  .fam5_fc_n012_k02 (2)  .fam5_fcwpf_n012_k02  all_codes_3  all_codes_5  all_codes_5_n:10  all_codes_5_n:100  all_codes_5_n:10_g:all  all_codes_5_n:12  all_codes_5_n:12_g:all  all_codes_5_n:14  all_codes_5_n:14_g:all  all_codes_5_n:15  all_codes_5_n:15_g:all  all_codes_5_n:17  all_codes_5_n:17_g:all  all_codes_5_n:18  all_codes_5_n:18_g:all  all_codes_5_n:20  all_codes_5_n:20_g:all  all_codes_5_n:21  all_codes_5_n:21_g:all  all_codes_5_n:24  all_codes_5_n:24_g:all  all_codes_5_n:25  all_codes_5_n:25_g:all  all_codes_5_n:27  all_codes_5_n:27_g:all  all_codes_5_n:28  all_codes_5_n:28_g:all  all_codes_5_n:30  all_codes_5_n:30_g:all  all_codes_5_n:31  all_codes_5_n:33  all_codes_5_n:34  all_codes_5_n:35  (+245 more)
mnlc_simulations/data/15_5/: i0_1  i0_11  i0_2  i0_3  i0_4  i0_5  i0_6  i0_7  i0_8  i0_9
mnlc_simulations/data/21/: i0_1  i0_10  i0_11  i0_12  i0_13  i0_14  i0_15  i0_16  (+11 more)
mnlc_simulations/qc/: QC.c  QC.h
mnlc_simulations/src/: .find_codes.rs  .generalized_bicycle_codes.rs  find_codes.rs  flint.rs  generalized_bicycle_codes.rs  graphs.rs  here.code-workspace  increasing_range_codes.rs  lib.rs  main.rs  qc.rs  random_codes.rs
mnlc_simulations/tests/: a.out  data.csv  data_analysis.py  flint_fac.c  flint_fac.h  hey.csv  mul.py  test_link.c
(+70 files in other folders)
